--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@ document.onkeydown = function(){
     if (oEvent.keyCode ==67) {drawcircle=!drawcircle;};
 };
 
+resize();
 starttime=new Date();
 loadimages();
 buildobjs();
